// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`extensions > applies esbuild plugin to .js 1`] = `
"// __tests__/use-client/fixtures/esbuild/client.js
import { registerClientReference as $$registerClientReference$$ } from "pkg";
var $$Ref$$default = $$registerClientReference$$();
export {
  $$Ref$$default as default
};
"
`;

exports[`extensions > applies esbuild plugin to .jsx 1`] = `
"// __tests__/use-client/fixtures/esbuild/client.jsx
import { registerClientReference as $$registerClientReference$$ } from "pkg";
var $$Ref$$default = $$registerClientReference$$();
export {
  $$Ref$$default as default
};
"
`;

exports[`extensions > applies esbuild plugin to .mjs 1`] = `
"// __tests__/use-client/fixtures/esbuild/client.mjs
import { registerClientReference as $$registerClientReference$$ } from "pkg";
var $$Ref$$default = $$registerClientReference$$();
export {
  $$Ref$$default as default
};
"
`;

exports[`extensions > applies esbuild plugin to .mts 1`] = `
"// __tests__/use-client/fixtures/esbuild/client.mts
import { registerClientReference as $$registerClientReference$$ } from "pkg";
var $$Ref$$default = $$registerClientReference$$();
export {
  $$Ref$$default as default
};
"
`;

exports[`extensions > applies esbuild plugin to .ts 1`] = `
"// __tests__/use-client/fixtures/esbuild/client.ts
import { registerClientReference as $$registerClientReference$$ } from "pkg";
var $$Ref$$default = $$registerClientReference$$();
export {
  $$Ref$$default as default
};
"
`;

exports[`extensions > applies esbuild plugin to .tsx 1`] = `
"// __tests__/use-client/fixtures/esbuild/client.tsx
import { registerClientReference as $$registerClientReference$$ } from "pkg";
var $$Ref$$default = $$registerClientReference$$();
export {
  $$Ref$$default as default
};
"
`;

exports[`extensions > doesn't apply esbuild plugin to .cjs 1`] = `
""use client";

// __tests__/use-client/fixtures/esbuild/not-valid.cjs
var not_valid_default = 1;
export {
  not_valid_default as default
};
"
`;

exports[`extensions > doesn't apply esbuild plugin to .css 1`] = `
"/* __tests__/use-client/fixtures/esbuild/not-valid.css */
"
`;

exports[`extensions > doesn't apply esbuild plugin to .cts 1`] = `
""use client";

// __tests__/use-client/fixtures/esbuild/not-valid.cts
var not_valid_default = 1;
export {
  not_valid_default as default
};
"
`;
